[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "numpy"]

[project]
name = "wavespectra"
description = "Ocean wave spectra tools"
readme = "README.rst"
license = { file = "LICENSE.txt" }
keywords = ["wave", "spectra", "ocean", "xarray", "statistics", "analysis"]
authors = [
  { name = "MetOcean Solutions", email="support@metocean.co.nz" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "xarray>=0.16.1,<=2023.01.0",
    "python-dateutil",
    "dask>=0.17.1",
    "toolz",
    "sortedcontainers",
    "scipy",
    "pyaml",
]
dynamic = ["version"]

[project.urls]
"Funding" = "http://www.metocean.co.nz"
"Say Thanks!" = "http://www.metocean.co.nz"
"Source" = "https://github.com/metocean/wavespectra"
"Bug Reports" = "https://github.com/metocean/wavespectra/issues"


[project.optional-dependencies]
extra = ["netCDF4", "sympy", "dbfread", "matplotlib<3.6"]
metocean = ["cfjson@git+https://github.com/metocean/cf-json"]
test = ["pytest", "ipython"]
